<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityImport">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="332dp"
        android:layout_height="114dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="54dp"
        android:linksClickable="true"
        android:text="@string/syncthing_info"
        app:layout_constraintBottom_toTopOf="@+id/buttonImportSyncthing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonImportSyncthing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/import_backup_with_syncthing"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/your_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/your_placeholder"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="245dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"

        android:text="@string/restore_latest_backup"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_placeholder" />


</androidx.constraintlayout.widget.ConstraintLayout>